added get all tasks endpoint and testing.rest file
